<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="mhs"
            type="com.styephenwilliam.gd3_2_e_9590.Mahasiswa" />

        <variable
            name="activity"
            type="com.styephenwilliam.gd3_2_e_9590.MainActivity" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:contex=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            tools:context=".MainActivity"
            android:id="@+id/layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/npm_text"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@={mhs.npm}"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_text"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@={mhs.nama}"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fakultas_text"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@={mhs.fakultas}"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jurusan_text"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@={mhs.jurusan}"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipk_text"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@={mhs.stringIpk}"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobi_text"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@={mhs.hobi}"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="@string/simpan_text"
                android:onClick="@{activity.btnSaveMahasiswa}"/>
        </LinearLayout>
    </RelativeLayout>
</layout>